[tool.poetry]
name = "src"
version = "1.0.0"
description = "SkyBlock Data Packs"
authors = ["BluePsychoRanger"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beet = { git = "https://github.com/misode/beet.git", branch = "1.21" }
mecha = { git = "https://github.com/misode/mecha.git", branch = "1.21" }
bolt = "^0.48.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[tool.beet]

[tool.pyright]
typeCheckingMode = "strict"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
